Fixed layout issues on pms detail page. refs #326

--- a/backoffice/backoffice-browser/src/pages/preismeldestelle/components/preismeldestelle-detail/preismeldestell-detail.scss
+++ b/backoffice/backoffice-browser/src/pages/preismeldestelle/components/preismeldestelle-detail/preismeldestell-detail.scss
@@ -9,4 +9,7 @@ preismeldestelle-detail {
         border: none;
         margin-bottom: 2px;
     }
+    .pef-select select {
+        margin-bottom: 0 !important;
+    }
 }
